Release 1.4.1 (**tip**)
=======================

* Add CacheManager.invalidate function to easily invalidate cache
  spaces created by the use of the cache decorator.
* Add CacheManager.region_invalidate function to easily invalidate cache
  spaces created by the use of the cache_region decorator.
* Fix the InvalidCryptoBackendError exception triggering a TypeError. Patch
  from dz, fixes #13.

Release 1.4 (7/24/2009)
=======================

* Fix bug with hmac on Python 2.4. Patch from toshio, closes ticket #2133
  from the TurboGears2 Trac.
* Fix bug with occasional ValueError from FileNamespaceManager.do_open.
  Fixes #10.
* Fixed bug with session files being saved despite being new and not
  saved.
* Fixed bug with CacheMiddleware overwriting configuration with default
  arguments despite prior setting.
* Fixed bug with SyntaxError not being caught properly in entry point
  discovery.
* Changed to using BlobProperty for Google Datastore.
* Added domain/path properties to the session. This allows one to
  dynamically set the cookie's domain and/or path on the fly, which
  will then be set on the cookie for the session.
* Added support for cookie-based sessions in Jython via the JCE (Java
  Cryptography Extensions). Patch from Alex Grönholm.
* Update Beaker database extensions to work with SQLAlchemy 0.6
  PostgreSQL, and Jython.

Release 1.3.1 (5/5/2009)
========================

* Added a whole bunch of Sphinx documentation for the updated site.
* Added corresponding remove as an alias to the caches remove_value.
* Fixed cookie session not having an invalidate function.
* Fix bug with CacheMiddleware not using proper function to load
  configuration options, missing the cache regions.

Release 1.3 (4/6/2009)
======================

* Added last_accessed attribute to session to indicate the previous time the
  session was last accessed.
* Added setuptools entry points to dynamically discover additional namespace
  backends.